--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <title>roadmap.sh</title>
     <body>
-        <h3>Hello, GitHub Actions!</h3>
+        <h3>Hello, World!</h3>
     </body>
 </html>
